2005-06-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcursorview.c
	* app/widgets/gimpdataeditor.c
	* app/widgets/gimpeditor.c
	* app/widgets/gimphistogrameditor.c
	* app/widgets/gimppaletteeditor.c: peek at the default interface to
	get the parent interface. Unconditionally chain up in get_aux_info()
	and set_aux_info() methods.

2005-06-04  Manish Singh  <yosh@gimp.org>

	* libgimp/Makefile.am: reorder to get the marshal files built first.

2005-06-04  Manish Singh  <yosh@gimp.org>

	* libgimp/gimpfontselectbutton.[ch]: new formal widget based on
	gimpfontmenu.[ch].

	* libgimp/gimpuimarshal.list: needed for new signal in above.

	* libgimp/gimpfontmenu.[ch]: deprecate, and thinly wrap around
	new GimpFontSelectButton for compatibility.

	* libgimp/gimpuitypes.h: add GimpFontSelectButton, as well
	as types for the future SelectButtons.

	* libgimp/gimpui.h
	* libgimp/Makefile.am: hook in the new widget.

	* plug-ins/common/film.c
	* plug-ins/script-fu/script-fu-interface.c: use new API.

2005-06-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdocked.[ch]
	* app/widgets/gimpeditor.[ch]: moved button-bar API to the
	GimpDocked interface.

	* app/widgets/gimpcontainereditor.c: implement the new interface
	methods and proxy them to the embedded docked.

	* app/actions/dockable-actions.c
	* app/actions/dockable-commands.c: changed accordingly.

2005-06-04  Manish Singh  <yosh@gimp.org>

	* libgimp/gimpimagecombobox.h
	* libgimp/gimpdrawablecombobox.h: fix the type macros so they work.

2005-06-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerview.h: don't include gimpeditor.h.

	* app/widgets/gimpbufferview.c
	* app/widgets/gimpdocumentview.c
	* app/widgets/gimpfontview.c: include it here instead.

2005-06-04  Sven Neumann  <sven@gimp.org>

	* app/actions/dockable-actions.c
	* app/actions/dockable-commands.[ch]
	* app/widgets/gimpeditor.[ch]
	* app/widgets/gimphelp-ids.h