@@ -1,5 +1,11 @@
 2005-06-05  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpviewrendererbrush.c
+	(gimp_view_renderer_brush_render_timeout): if the area is larger
+	than the brush, center the brush.
+
+2005-06-05  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpcoloreditor.c
 	* app/widgets/gimpcursorview.c
 	* app/widgets/gimpdataeditor.c
